# pydantic-to-html

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MAINTENANCE.md  README.md  publish.sh  pyproject.toml
.github/workflows/: README.md  workflow.yml
docs/: index.md
docs/examples/: 01_basic_usage.py  02_nested_models.py  03_editable_forms.py  04_themes_and_styling.py  05_htmx_integration.py  06_depth_control.py  07_dataclass_support.py
examples/: __init__.py  basic_example.py  pydantic_v2_comparison.py
src/pydantic_to_html/: __init__.py  html_renderer.py
tests/: __init__.py  test_dataclass_support.py  test_edge_cases.py  test_html_renderer.py
