[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-to-html"
version = "0.1.1"
authors = [
    {name = "Tom Counsell", email = "contact@yudame.com"},
]
description = "A library to convert Pydantic models to HTML"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yudame/pydantic-to-html"
"Bug Tracker" = "https://github.com/yudame/pydantic-to-html/issues"
"Documentation" = "https://github.com/yudame/pydantic-to-html#readme"
"Changelog" = "https://github.com/yudame/pydantic-to-html/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF", "SIM", "TID"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]